Project Complete ver: 0

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div id="container">
 			<header>
 				<h1>Trishneet Arora</h1>
-				<h2>Some oneliner for Trishneet Arora</h2>
+				<h2>The Founder and CEO of TAC Security, an IT security company.</h2>
 			</header>
 			<div id='img-container'>
 				
@@ -28,29 +28,39 @@
 
 			<div id="section">
 				<h3 id='headline'>Here's a time line of Trishneet Arora.</h3>
-				<h2>Works.</h2>
+				<h2>Achievements</h2>
 				<ul>
-					<li></li>
+					<li>He was named in Forbes 30 Under #0 2018 Asia list.</li>
+					<li>Arora has written books on cyber security, ethical hacking and web defence.</li>
+					<li>He is the founder and CEO of TAC Security.</li>
 				</ul>
 				<br>
+				<h2>Awards and recognition</h2>
+				<ul>
+					<li>Leaders of Tomorrow by St. Gallen Symposium in 2018.</li>
+					<li>Forbes 30 under 30 by Forbes Asia in 2018.</li>
+					<li>The 50 Most Influential Young Indians by GQ Magazine in 2017.</li>
+					<li>Punjabi Icon Award by PCHB in 2015.</li>
+					<li>Chief Minister of Punjab, Parkash Singh Badal bestowed a State Award unpon Arora on the 64th Republic Day in 2014.</li>
+				</ul>
+
+				<br>
+
+				<h2>Books</h2>
+				<ul>
+					<li>Hacking Talk with Trishneet Arora</li>
+					<li>The Hacking Era</li>
+					<li>Hacking With Smart Phones (LUlu 2015)</li>
+				</ul>
+
 				<h2>Career</h2>
-				<ul>
-					<li></li>
-					<li></li>
-				</ul>
+				<P>Arora founded TAC Security, a cyber security company that provides protection to corporations against network vulnerabilities and data theft. Some of his clients are Reliance Industries, Central Bureau of Investigation, Punjab Police (India) and Gujarat Police. He helps the Punjab and Gujarat police in investigating cyber crimes, for which he has conducted training sessions with officials.
 
-				<br>
-
-				<h2>Early life</h2>
-				<ul>
-					<li></li>
-					<li></li>
-				</ul>
-
+Arora's company mainly provides vulnerability assessment and penetration testing services. According to Arora, there has been an increase in the number of attacks against portals of companies.</P>
 			</div>
 
 			<footer>
-				<h3>To Know more <a href="">click here</a></h3>
+				<h3>To Know more <a href="https://en.wikipedia.org/wiki/Trishneet_Arora">click here</a></h3>
 			</footer>
 		</div>
 	</div>
