Project Complete ver: 0.1 (+ added a line after image)

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				
 					<img src="img/Trishneet Arora.jpg" alt='Trishneet image'>
 				
-				<div id="img-caption"><p>some quote from him.</p></div>
+				<div id="img-caption"><p>Trishneet Arora is the living proof that Knowledge is more important than any School degree.</p></div>
 			</div>
 
 			<div id="section">
